--- a/QuanLyBanHang/GUI/LoaiHang.resx
+++ b/QuanLyBanHang/GUI/LoaiHang.resx
@@ -141,17 +141,17 @@
   </data>
   <data name="btnSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAB90lEQVRIS7WVSy8DURiGh1hY2iFMO9UfYiMRP4pIiEltVOg0FXUrtUERGgRxWwipS93aaTtDhIU0
-        mRktuhCfOWdmaMdp01He5N20zfOcvmdxKEEQ7FexuHgavfyInEXB3JR4B2lJIVVRG5AkqY4qFQQngY2W
-        EBid0lHkFDu50TIEso4ihwRFPTo5B/f4LPSPTkNo6wCe0hIJjqujyCHBUefCm9A54AV2JADu6QU4jN4Q
-        4ag6ihwSHHV+7Z8FaKLBSTTRzP9MZLSMS7YuWNnahR6PH7ryJhoLrcNZLFm5YO/wGLrcXrx//h2gDgUX
-        IXX/WJkguLz2BTcLUPdPLioTLG3s4GlIgsGZEESu+ZICp+eVZrhMKwVQhT8wC8y1csl27qXDwWWzDi4D
-        Dk4JUN1Q80Pg8k2WnCi4um0SyP5veCaH4Z5nsLEJsLmEU+uCcL5A9gNAdSFcUeE80D2XYOu9/qhgomLw
-        BIZjAZt8sPQPvufR4Iw3266C38hwXrH7bhutCfA8FuAoFt+DCTOcGZbB1qdt/gOOchXjBRLYaJ5AEkWo
-        beGybSoYb67B4wVwxiM26Ggt2pvMp8p4kzfQ71u4zDaepRz4b6LC0whOm+AFs/w2zd7XJmZYUk8e+3s4
-        Cu2TnTTLv6unz9Fs4t7uEsMOt1Cvf00IRX0C/95LieL5YXwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAH3SURBVEhLtZVL
+        LwNRGIaHWFjaIUw71R9iIxE/ikiISW1U6DQVdSu1QREaBHFbCKlL3dppO0OEhTSZGS26EJ85Z2Zox2nT
+        Ud7k3bTN85y+Z3EoQRDsV7G4eBq9/IicRcHclHgHaUkhVVEbkCSpjioVBCeBjZYQGJ3SUeQUO7nRMgSy
+        jiKHBEU9OjkH9/gs9I9OQ2jrAJ7SEgmOq6PIIcFR58Kb0DngBXYkAO7pBTiM3hDhqDqKHBIcdX7tnwVo
+        osFJNNHM/0xktIxLti5Y2dqFHo8fuvImGgutw1ksWblg7/AYutxevH/+HaAOBRchdf9YmSC4vPYFNwtQ
+        908uKhMsbezgaUiCwZkQRK75kgKn55VmuEwrBVCFPzALzLVyyXbupcPBZbMOLgMOTglQ3VDzQ+DyTZac
+        KLi6bRLI/m94JofhnmewsQmwuYRT64JwvkD2A0B1IVxR4TzQPZdg673+qGCiYvAEhmMBm3yw9A++59Hg
+        jDfbroLfyHBesftuG60J8DwW4CgW34MJM5wZlsHWp23+A45yFeMFEthonkASRaht4bJtKhhvrsHjBXDG
+        IzboaC3am8ynyniTN9DvW7jMNp6lHPhvosLTCE6b4AWz/DbN3tcmZlhSTx77ezgK7ZOdNMu/q6fP0Wzi
+        3u4Sww63UK9/TQhFfQL/3kuJ4vlhfAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -166,6 +166,21 @@
         VwNHJdHb3FjqBD76ksuDCziPlwDH8UqEw3iLjGG8bYoQZRn60G5Fd7PA3vzQaBSVBfsMaqA4s5wF9v+j
         gkfJYRfBn8zSJEc1ho5rXTwpuCVpkWSopOm47rtwInjrbJFmWzYJen3hxJX5ZlsC/bosllrAFut3fmW+
         wOrKtNB16W+SQw/kY9/zS/8qOQQQlETl0q/HAV7626Ix8dvi4JPJH/yasidL5udkAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AUbExcAFRo1ZQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHBSURBVEhL
+        xdXLK4RRGMfxGQuXBRk71wULSZYue5G9klJuS2yEkiJ/gQWS24KwNbbIlkiuK0uKKKIU5Ta+Px7xmsm8
+        c9H86rN4n3PO884c4xxPwhIIBDLQiCXs4QJXOMI8GpBm092HRSnoxQ2UfUxhGIOYxAGUS3QiyZb/HSZm
+        YxvPmEahDQWFsWLM4Q0byLKh0GFCDs6grai0ctgwtxrXOIbPys4wkIodnCPfyq7DmhLoJWvwWvk7FAfw
+        hHIrRRzW1kDb1WSlz1DIwh3GrRR16NGCMnv8DIV2vCLXSvENjVewaY8xh16tKLHHj8IJRuwx5tDrEQ/o
+        gleFe/TYuCPUx7AeIW33V/xfL+izno5QH0WoJn/5+YJlNfn3LfJjy8ZjDr2a4fgjt0FfK89K8Q2NfbjF
+        hJWiDj30E3X+oykU+6GjosJKEYe1dQg+KhSKOux0TOuwK7Cy67CmFLo/VhF82CkM6Lg+hY7rKiuHDXNr
+        oea66TKtHDpM0IWzhRfMosiGgsKYPvUCtC36/Ye+C36Hicnohs535RAz0JU5BF2fulwUfdsOuLsyf4ZF
+        6dDFvohdqJnuYL1QV2U9Um16ouLxvAOS2pgCRsbfCgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
