--- a/QuanLyBanHang/GUI/LoaiHang.resx
+++ b/QuanLyBanHang/GUI/LoaiHang.resx
@@ -168,7 +168,7 @@
         wOrKtNB16W+SQw/kY9/zS/8qOQQQlETl0q/HAV7626Ix8dvi4JPJH/yasidL5udkAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnThoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
