update btnTim btnXem btnThoat Form HoaDon

--- a/QuanLyBanHang/GUI/HoaDon.resx
+++ b/QuanLyBanHang/GUI/HoaDon.resx
@@ -350,4 +350,23 @@
         ajs8D47zCzSIhT3QUc63AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnXem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AYHEB4rN01bwgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKWSURBVEhL
+        rVVJaBRBFG1FRXCZ3uJyMnpQvIgoeBTBBQQ3xJN4EBQRJdDTVaNJRBjw4iHowZNnPSoqingSRRSJJw96
+        UDRoxEyqKpkkI4lisH2/+kcdnC3pefDprve36vq/fzltRTFZ4Av92o/1RWYaI4z06iA2Z31hHsHxA+QH
+        pIIAnzyh7wVCdXUU1Co2d5bnx33oE8hDpmqDDa9wQHKgZz+C3rHJkIB5kkmsr5JPSwlCobfC4CsZBlI/
+        8aTev1KWlrD6D2jnvlQnYPcmDWoGfDGyO32vkyCQZheU3yCjYawPMN0YOHdPmG74/GSpnSCXH15HgSGf
+        6Z3pluHFeh98p+skSOaB7IdUPDm8icnmKCbzXaG2e7G6Bl97rCzX2SJFIMwhq4i1ZKopaCPw+fJP0HHU
+        7IY92lPJQjZLgQI9h8EgdrSIqaYI8mYbuup9IPRN1O5gZ3FgMauqwa1FZ9fHVFuwrGcisC8zx4Mfaqcl
+        2gA6JooZSr3DQYudoYUrymtYnxlBrI5TTF/qCF+gemnhnR/NsT4z/p6KuoBsNGvwBdFQJ+szo+oLaBTY
+        bPiLWZ8Z6MpLFNO2LObMCiymkfUy6zMDO3+FmL8otiXQz49pQs7mP6iHIDIb7fEI/ZQpW5TDRFI9mJoz
+        MJPupgnUEaZSgHwGmaAdMDVroJ5HOfgLmlNMp0BB1kNhYPAuJ0trmW4Z1CQYG9/hPxae0xuYrgZNRhhM
+        QUp+YWQP042BnaJ+MXzoLqg07cawoLfA8CMkwY7ue0Lt/W86Am5Udr3YHIMd32h60C2ozaxujFz3mAeH
+        PgjdbuRchrz0pbmF5wMI3R0zt9cUtficJgH1MVr4NGpzm0YzglGiSfT5W+6Wk0u7hjrYvAYc5zcb7aQ1
+        lYd1OAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
